[gd_scene load_steps=3 format=3 uid="uid://node_card_component"]

[ext_resource type="Script" path="res://ui/components/node_card.gd" id="1_script"]
[ext_resource type="Theme" path="res://themes/KeyboardDefenseTheme.tres" id="2_theme"]

[node name="NodeCard" type="PanelContainer"]
custom_minimum_size = Vector2(260, 96)
theme = ExtResource("2_theme")
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_script")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Content"]
layout_mode = 2
horizontal_alignment = 1
text = "Node Title"

[node name="LessonLabel" type="Label" parent="Content"]
layout_mode = 2
horizontal_alignment = 1
text = "Lesson: Home Row"

[node name="RewardLabel" type="Label" parent="Content"]
layout_mode = 2
horizontal_alignment = 1
text = "Reward: 50g"
